[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Themes/themes.theme" type="Theme" id=1]
[ext_resource path="res://Scenes/Themes/title.theme" type="Theme" id=2]
[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texts" type="VBoxContainer" parent="CenterContainer"]
margin_left = 221.0
margin_top = 147.0
margin_right = 803.0
margin_bottom = 453.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/Texts"]
margin_right = 582.0
margin_bottom = 160.0
theme = ExtResource( 2 )
text = "RELIT"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="CenterContainer/Texts"]
margin_top = 210.0
margin_right = 582.0
margin_bottom = 306.0
custom_constants/separation = 30

[node name="StartGame" type="Label" parent="CenterContainer/Texts/Options"]
margin_right = 582.0
margin_bottom = 33.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Start Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="CenterContainer/Texts/Options"]
margin_top = 63.0
margin_right = 582.0
margin_bottom = 96.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Credits"
align = 1
valign = 1
[connection signal="gui_input" from="CenterContainer/Texts/Options/StartGame" to="." method="_on_StartGame_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/Texts/Options/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Texts/Options/StartGame" to="." method="_on_StartGame_mouse_exited"]
[connection signal="gui_input" from="CenterContainer/Texts/Options/Credits" to="." method="_on_Credits_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/Texts/Options/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Texts/Options/Credits" to="." method="_on_Credits_mouse_exited"]
